--- a/Spring_Infearn/BoardPractice/src/main/webapp/resources/css/bootstrap.css
+++ b/Spring_Infearn/BoardPractice/src/main/webapp/resources/css/bootstrap.css
@@ -4739,6 +4739,17 @@ tbody.collapse.show {
   border: 1px solid #dee2e6;
 }
 
+.page-link-curPage {
+  position: relative;
+  display: block;
+  padding: 0.5rem 0.75rem;
+  margin-left: -1px;
+  line-height: 1.25;
+  color: #ff0000;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+}
+
 .page-link:hover {
   color: #0056b3;
   text-decoration: none;
