--- a/Android_Busan_it/MyActivityIntent3/app/src/main/res/layout/activity_main.xml
+++ b/Android_Busan_it/MyActivityIntent3/app/src/main/res/layout/activity_main.xml
@@ -10,42 +10,44 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3">
+        android:layout_weight="3"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv1"
             android:layout_width="wrap_content"
             android:layout_margin="5dp"
-            android:layout_height="0dp"
             android:layout_weight="1"
-            android:src="@drawable/pic1" />
+            android:layout_height="wrap_content"
+            android:src="@drawable/pic4" />
         <ImageView
             android:id="@+id/iv2"
             android:layout_width="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:src="@drawable/pic2"
-            android:layout_height="0dp" />
+            android:layout_height="wrap_content"
+            android:src="@drawable/pic4" />
         <ImageView
             android:id="@+id/iv3"
             android:layout_width="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:layout_height="0dp"
-            android:src="@drawable/pic3" />
+            android:layout_height="wrap_content"
+            android:src="@drawable/pic4" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3">
+        android:layout_weight="3"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv4"
             android:layout_width="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/pic4" />
 
         <ImageView
@@ -53,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/pic5" />
 
         <ImageView
@@ -61,34 +63,35 @@
             android:layout_width="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/pic6" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3">
+        android:layout_weight="3"
+        android:orientation="horizontal">
         <ImageView
             android:id="@+id/iv7"
             android:layout_width="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/pic7" />
         <ImageView
             android:id="@+id/iv8"
             android:layout_width="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/pic8"/>
         <ImageView
             android:id="@+id/iv9"
             android:layout_width="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/pic9"/>
     </LinearLayout>
 
